scss/core/objects/_grids.scss
@if $use-grids == true {

/*------------------------------------*\
		$GRIDS
\*------------------------------------*/
/**
 * Fluid and nestable grid system, e.g.:
 *
	 <div class="gw">

			 <div class="g  one-third">
					 <p>One third grid</p>
			 </div><!--

		--><div class="g  two-thirds">
					 <p>Two thirds grid</p>
			 </div><!--

		--><div class="g  one-half">
					 <p>One half grid</p>
			 </div><!--

		--><div class="g  one-quarter">
					 <p>One quarter grid</p>
			 </div><!--

		--><div class="g  one-quarter">
					 <p>One quarter grid</p>
			 </div>

	 </div>
 *
 * Demo: jsfiddle.net/inuitcss/CLYUC
 *
 */


/**
 * Grid wrapper
 */
%grid {
	@include px-and-rem(margin-left, -$base-spacing-unit);
	list-style: none;
	margin-bottom: 0;

	@if $use-flexbox-grid { @include display(flex);}
}

/**
 * very infrequently occuring grid wrappers as children of grid wrappers.
 */
[class*="gw"] > [class*="gw"] { margin-left: 0;}

%grid, %grid__item {
	@if $use-flexbox-grid { @include flex-wrap(wrap);}
}

.gw { @extend %grid;}


	/**
	 * grid
	 */
	%grid__item {
		@if $use-legacy-grid {
			display: inline-block;
			width: 100%;
			vertical-align: top;
		}

		@if $use-flexbox-grid {
			@include flex-grow(0);
			@include flex-shrink(1);
		}

		@include px-and-rem(padding-left, $base-spacing-unit);

		@if $global-border-box == false {
			@include vendor(box-sizing, border-box);
		}
	}

	.g { @extend %grid__item;}

	@if $use-flexbox-grid {
		/**
		 * Allow the content of a column to occupy the full height of the
		 * column
		 *
		 * Child div must have flex: 1; or width: 100%; set to fill horizontal
		 * space
		 */
		.g_-tall {
			@extend %grid__item;
			@include display(inherit);
		}

		/**
		 * Columns that automatically fill the remaining horizontal space
		 *
		 * To be used as is, without column width modifiers
		 */
		.g_-auto {
			@extend %grid__item;
			@include flex-grow(1);
			@include flex-basis(0);
		}
	} // endif




/**
* reversed grids
*/
%gw_-rev {
	@extend %grid;

	@if $use-legacy-grid {
		direction: rtl;
		text-align: right;
	}

	@if $use-flexbox-grid { @include flex-direction(row-reverse);}

	& > %grid__item {
		@if $use-legacy-grid {
			direction: ltr;
			text-align: left;
		}
	}
}


/**
* gutterless grids have all the properties of regular grids, minus any spacing.
*/
%gw_-no-guts {
	@extend %grid;
	margin-left: 0;

	& > %grid__item { padding-left: 0;}
}


/**
* centered grids align grid items centrally without needing to use push or pull
* classes.
*/
%gw_-center {
	@extend %grid;

	@if $use-legacy-grid { text-align: center;}

	@if $use-flexbox-grid { @include justify-content(center);}

	& > %grid__item {
		@if $use-legacy-grid { text-align: left;}
	}
}

}//endif

